# ChangeLog for www-misc/monitorix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Oct 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.4.0.ebuild:
  added the example alert script and a hint for it in postinst message, thx to
  alexandervdm and Tommy[D] for review

  05 Oct 2009; Markus Rennings (mren) <mren@mrmx.de>
  -monitorix-1.3.2.ebuild, +monitorix-1.4.0.ebuild:
  version bump

  01 Sep 2009; Markus Rennings (mren) <mren@mrmx.de>
  -files/1.3.1-evms.patch, -monitorix-1.3.1.ebuild, +monitorix-1.3.2.ebuild,
  -files/monitorix.conf.patch:
  version bump; patches are not needed anymore, they're included upstream

  27 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.3.1.ebuild:
  added missing dep, thx to David for the hint

  17 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.3.1.ebuild:
  edited postinst text, thx to David for the hint

  14 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.3.1.ebuild:
  forgot webapp_pkg_postinst; added ~x86 keyword, thx to David for testing

  11 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.3.1.ebuild:
  added a png

  11 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.3.1.ebuild:
  added evms RDEPEND if USE=evmsx

  11 Aug 2009; Markus Rennings (mren) <mren@mrmx.de> +Manifest:
  forgot Manifest

  11 Aug 2009; Markus Rennings (mren) <mren@mrmx.de>
  +files/1.3.1-evms.patch, +monitorix-1.3.1.ebuild,
  +files/monitorix.conf.patch, +metadata.xml:
  new ebuild for monitorix, bug 281087
