@@ -1,4 +1,4 @@
-DIST monitorix-1.4.0.tar.gz 158262 RMD160 a01b1a4f64fcfb44791e568b1bb2058fc4841c70 SHA1 24f9e1fbba683654e5d7df1a0e4745afda68e34b SHA256 4e70f29e0a62c58ddc6f5682fe35d1a604f07194a6dd5b50ee0aafef01d358f3
-EBUILD monitorix-1.4.0.ebuild 2600 RMD160 c18182bd7177d2b080ea4483c09b9ce4778be43a SHA1 fe4bba4a1f78ab85c34c1ad6c47949b5ee498aaf SHA256 6e7a6c096482dc5be6cf4da47c1cd40b94e3941e5390a32f05c8eb909a960e5d
-MISC ChangeLog 1556 RMD160 e3914df9877ed325704da94ecdb33b14134e25bd SHA1 4bd54d8a35d2f6f374d12ffdaf239bf9e13afa27 SHA256 4742f5cd809e2ced26fe8f66b0fe02009ab72e15fd6b793863ddcccc9cf31909
+DIST monitorix-1.4.1.tar.gz 136941 RMD160 7bc96a185835d8b86e81b3676471edecce93c3e3 SHA1 5ede11faf4eeb0a7351103e4c62d95ad28956bd5 SHA256 25fd799ae4dd1614d0004f00a7606c1c25cf4496f09250b49db531987a9c0815
+EBUILD monitorix-1.4.1.ebuild 2467 RMD160 c000dd0ce79f548fc782083be0e319eb831c3d0f SHA1 d5b54babdbd84b63aad3b75f160fc0dbde3a7205 SHA256 abb8ce0c527247d33bb8e86f679d9896c802c48dbc736ee7e50bcec2dd72bc96
+MISC ChangeLog 1677 RMD160 14fa483461c6ea206671f18021292c0713f923f9 SHA1 6522ac14318c3eb601673e1a762327ae7fc914de SHA256 f1c97906fd7a52ca168f706036085e968c673e1e148c1044413f6a7368d1092c
 MISC metadata.xml 285 RMD160 14c03bdcabba50a240b6f81468518ecb9a9260c2 SHA1 f1cb6d0492c498ffa08d16442a510bda679f43e9 SHA256 49a0e28498b88a6e7b8d15996ad998d8345f9ef128b4ee6329e1547d64ee6653
