@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/monitorix
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Jan 2010; Markus Rennings (mren) <mren@mrmx.de>
+  -monitorix-1.4.0.ebuild, +monitorix-1.4.1.ebuild:
+  Version bump
 
   06 Oct 2009; Markus Rennings (mren) <mren@mrmx.de> monitorix-1.4.0.ebuild:
   added the example alert script and a hint for it in postinst message, thx to
